--- a/public/views/layout.pug
+++ b/public/views/layout.pug
@@ -9,10 +9,8 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ', crossorigin='anonymous')
     link(rel='stylesheet', href='style.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(property='og:url', content='http://www.monitr.tk')
-    meta(property='og:title', content='Свежие объявления с krisha, kolesa на Вашем телефоне')
-    meta(property='og:description', content='Автоматическое уведомление на Ваш телефон новых добавленных объявлений с сайта krisha, kolesa с Вашими фильтрами')
-    meta(property='og:image', content='http://res.cloudinary.com/bereket/image/upload/v1515834958/112236_arltoz.jpg')
+    meta(property='og:url', content='http://www.bektaz.tk')
+    meta(property='og:title', content='Депозит в долларах от 30 до 70% годовых. Личный опыт. Факты.')
     link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
   body
     block content
