--- a/public/views/homepage.pug
+++ b/public/views/homepage.pug
@@ -65,35 +65,35 @@ block content
                .carousel-caption
                 p Скрин счета с интернет банкинга
               .carousel-item.active 
-               img.d-block.w-100(src='img/10a.png', alt='First slide')
+               img.d-block.w-100(src='img/10a.jpg', alt='First slide')
                .carousel-caption
                 p Прибыль за 10 дней. План "Moneymaker"
               .carousel-item
-               img.d-block.w-100(src='img/11a.png', alt='Second slide')
+               img.d-block.w-100(src='img/11a.jpg', alt='Second slide')
                .carousel-caption
                 p Конвертация долларов в биткоин для вывода
               .carousel-item
-               img.d-block.w-100(src='img/12a.png', alt='Third slide')
+               img.d-block.w-100(src='img/12a.jpg', alt='Third slide')
                .carousel-caption
                 p Отправка (вывод) биткоина на собственный кошелек
               .carousel-item
-               img.d-block.w-100(src='img/13a.png', alt='Second slide')
+               img.d-block.w-100(src='img/13a.jpg', alt='Second slide')
                .carousel-caption
                 p Запрос на вывод. Отображается в таблице запросов в личном кабинете
               .carousel-item
-               img.d-block.w-100(src='img/14a.png', alt='Second slide')
+               img.d-block.w-100(src='img/14a.jpg', alt='Second slide')
                .carousel-caption
                 p В истории указаны ежедневные прибыли и запрос на вывод накопленной прибыли в биткоинах
               .carousel-item
-               img.d-block.w-100(src='img/15a.png', alt='Second slide')
+               img.d-block.w-100(src='img/15a.jpg', alt='Second slide')
                .carousel-caption
                 p Поступление биткоина на собственный кошелек
               .carousel-item
-               img.d-block.w-100(src='img/17a.png', alt='Second slide')
+               img.d-block.w-100(src='img/17a.jpg', alt='Second slide')
                .carousel-caption
                 p Поступление денег на карту после мгновенной продажи биткоина
               .carousel-item
-               img.d-block.w-100(src='img/16a.png', alt='Second slide')
+               img.d-block.w-100(src='img/16a.jpg', alt='Second slide')
                .carousel-caption
                 p SMS оповещение еженедельной прибыли
              .new-caption-area.text-center
