--- a/public/views/homepage.pug
+++ b/public/views/homepage.pug
@@ -64,7 +64,7 @@ block content
                img.d-block.w-100(src='img/9a.png', alt='Second slide')
                .carousel-caption
                 p Скрин счета с интернет банкинга
-              .carousel-item.active 
+              .carousel-item 
                img.d-block.w-100(src='img/10a.jpg', alt='First slide')
                .carousel-caption
                 p Прибыль за 10 дней. План "Moneymaker"
