--- a/public/views/homepage.pug
+++ b/public/views/homepage.pug
@@ -148,16 +148,8 @@ block content
        .col-md-12
         h3.registering Даже без размещения депозита, просто зарегистрировавшись Вы будете получать уведомление об ежедневной прибыли на почту. Регистрация БЕСПЛАТНАЯ. Убедитесь в правильности номера телефона так как будет SMS верификация.
         p.text-center
-         button.btn.btn-info.btn-lg(type="button", data-toggle="modal", data-target="#myModal") Войти или зарегистрироваться
-        #myModal.modal.fade(role='dialog')
-         .modal-dialog
-          .modal-content
-           .modal-header
-            h5.modal-title Вы уже зарегистрирваны в RoFx?
-            button.close(type='button', data-dismiss='modal') ×
-           .modal-footer
-             button.btn.btn-default(type='button', onclick='loginToRofx()') Да
-             button.btn.btn-default(type='button', onclick='registerToRofx()') Нет
+         a(href='https://rofx.net/#a_aid=5b5abc06797a7&a_bid=11110007', target='_blank')
+          button.btn.btn-info.btn-lg(type="button") Перейти на сайт
 
     #price
       .container
@@ -178,18 +170,8 @@ block content
                    a.modal-insta-link(href='https://www.instagram.com/bektaz.tk/')
                     img(src='img/instagram2.png')
                    button.btn.btn-info(type='button', onclick='openContactForm()') Форма связи
-    button.btn.btn-primary.btn-lg.a_investor(type='button', data-toggle="modal", data-target="#contactmodal1") #{data.investor[lc]}
-    #contactmodal1.modal.fade(role='dialog')
-     .modal-dialog
-      .modal-content
-       .modal-header
-        h5.modal-title Выберите способ связи
-        button.close(type='button', data-dismiss='modal') ×
-       .custom-modal-div
-        p.text-center
-         a.modal-insta-link(href='https://www.instagram.com/bektaz.tk/')
-          img(src='img/instagram2.png')
-         button.btn.btn-info(type='button', onclick='openContactForm()') Форма связи
+    a.a_investor(href='https://rofx.net/#a_aid=5b5abc06797a7&a_bid=11110007', target='_blank')
+     button.btn.btn-primary.btn-lg(type='button') #{data.investor[lc]}
     .footer
       .row
         .col-md-12
