--- a/public/views/layout.pug
+++ b/public/views/layout.pug
@@ -12,5 +12,33 @@ html
     meta(property='og:url', content='http://www.bektaz.tk')
     meta(property='og:title', content='Депозит в долларах от 30 до 70% годовых. Личный опыт. Факты.')
     link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
+	// Yandex.Metrika counter
+    script(type='text/javascript').
+      (function (d, w, c) {
+      (w[c] = w[c] || []).push(function() {
+      try {
+      w.yaCounter49830829 = new Ya.Metrika2({
+      id:49830829,
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true
+      });
+      } catch(e) { }
+      });
+      var n = d.getElementsByTagName("script")[0],
+      s = d.createElement("script"),
+      f = function () { n.parentNode.insertBefore(s, n); };
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = "https://mc.yandex.ru/metrika/tag.js";
+      if (w.opera == "[object Opera]") {
+      d.addEventListener("DOMContentLoaded", f, false);
+      } else { f(); }
+      })(document, window, "yandex_metrika_callbacks2");
+    noscript
+      div
+        img(src='https://mc.yandex.ru/watch/49830829', style='position:absolute; left:-9999px;', alt='')
+    // /Yandex.Metrika counter
+
   body
     block content
